--- a/markethub/package.json
+++ b/markethub/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
+    "env-cmd": "^10.1.0",
     "jodit": "^4.0.0-beta.61",
     "jodit-react": "^1.3.39",
     "react": "^18.2.0",
